--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
     /* Light Mode Palette */
     --color-bg: #F9F9F9;
     --color-surface: #FFFFFF;
+    --color-surface-2: #F2F2F2;
     /* --color-surface-alt: #F2F2F2; */
     --color-border: #E5E5E5;
     --color-text-primary: #181818;
@@ -18,17 +19,19 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-bg: #181818;
-    --color-surface: #212121;
+    --color-bg: #020202;
+    --color-surface: #080808;
+    --color-surface-2: #181818;
+    --color-border-2: #464646;
     --color-border: #303030;
     --color-text-primary: #F9F9F9;
     --color-text-secondary: #A3A3A3;
     --color-text-muted: #6B6B6B;
-    --color-accent: #30EEBF;
+    --color-accent: #12BA91;
     --color-accent-hover: #10A37F;
     --color-error: #B32626;
     --color-warning: #AD771E;
-    --color-success: #34D399;
+    --color-success: #12BA91;
   }
 }
 
@@ -43,13 +46,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+::selection {
+  background-color: var(--color-text-secondary);
+  color: var(--color-bg);
+}
+
 p {
   margin: 0;
   padding: 0;
   font-family: "Switzer", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 1;
+  /* line-height: 0; */
 
 }
 
