--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -9,21 +9,51 @@
     margin-top: 64px;
 }
 
-.greeting {
+
+
+.title-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+
+    width: 100%;
+    gap: 8px;
+}
+
+.title-icon {
+    width: 30px;
+    margin-top: 1px;
     color: var(--color-text-primary);
+}
+
+.tasks-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+
+}
+
+.tasks-header-text {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.title {
+    background: linear-gradient(180deg, #f9f9f9 55%, #a3a3a3 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text; /* For Firefox */
+    color: transparent;
     font-size: 24px;
     font-weight: 600;
     letter-spacing: -0.5px;
 }
 
-.tasks-header {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    width: 100%;
-    justify-content: left;  
-    gap: 12px;
-}
+
 
 .information {
     color: var(--color-text-secondary);
@@ -31,16 +61,154 @@
     font-weight: 500;
 }
 
-.task-add-input {
-    width: 620px;
-    height: 48px;
-    border-top: 1px solid var(--color-text-secondary);
-    border: none;
-    outline: none;
-    background-color: var(--color-surface);
-    color: var(--color-text-primary);
-    font-size: 14px;
-    font-weight: 400;
-    font-family: "Switzer", sans-serif;
+.dots-icon svg{
+    color: var(--color-text-secondary);
+    width: 20px;
+    cursor: pointer;
 }
 
+.task-add-input {
+    margin-top: 20px;
+    width: 580px;
+    /* height: 51px; */
+    border: none;
+    outline: none;
+    background-color: var(--color-surface-2);
+    color: var(--color-text-primary);
+    font-size: 15px;
+    border-radius: 12px;
+    font-weight: 500;
+    font-family: "Switzer", sans-serif;
+    padding: 16px 16px 16px 24px;
+}
+
+.task-add-input::placeholder {
+    font-weight: 400;
+    color: var(--color-text-secondary);
+}
+
+.task-input-container {
+    position: relative;
+    width: 620px; /* Match input width */
+
+}
+
+.task-add-tooltip {
+    position: absolute;
+    right: 16px;
+    top: 65%;
+    transform: translateY(-50%);
+    background-color: var(--color-border);
+    color: var(--color-text-secondary);
+    font-size: 12px;
+    font-weight: 600;
+    width: 24px;
+    height: 24px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.task-list-container {
+  margin-top: 16px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.task-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-surface);
+
+  border-radius: 12px;
+  padding: 15px 16px 15px 6px;
+  color: var(--color-text-primary);
+  border: 0.5px solid var(--color-border);
+}
+
+.task-item-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.drag-handle-icon {
+  width: 21px;
+  height: 21px;
+  color: var(--color-border-2); /* Adjust color as needed */
+}
+
+.check-square {
+  width: 16px;
+  height: 16px;
+  border-radius: 4px;
+  background-color: var(--color-border);
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+.task-title {
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.1px;
+}
+
+.task-item-right {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.task-time {
+  font-size: 14px;
+  color: var(--color-text-secondary);
+  font-weight: 400;
+}
+
+.task-date {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--color-success); /* Green color for the date, similar to the image */
+  background-color: hsla(165, 82%, 40%, 0.1); /* Slightly darker green background for the date */
+
+  /* padding: 4px 16px; */
+  width: 67px;
+  height: 22px;
+  border-radius: 5px;
+}
+
+
+
+
+
+.completed-task-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 24px;
+}
+
+.completed-task-title {
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--color-text-secondary);
+    margin: 0 8px;
+}
+
+.completed-task-line {
+    width: 50%;
+    height: 0.5px;
+    background-color: var(--color-text-secondary);
+
+}
