--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -5,7 +5,6 @@
   justify-content: center;
   width: 100%;
 
-  background-color: var(--color-bg);
   margin-top: 64px;
    user-select: none;       
   -webkit-user-select: none;
@@ -62,6 +61,10 @@
   font-weight: 500;
 }
 
+.today-count {
+  color: var(--color-text-primary);
+}
+
 .dots-icon svg {
   color: var(--color-text-secondary);
   width: 20px;
@@ -82,6 +85,11 @@
   font-family: "Switzer", sans-serif;
   box-sizing: border-box;
   padding: 16px 16px 16px 24px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.task-add-input:hover {
+  background-color: var(--color-surface-2);
 }
 
 .task-add-input::placeholder {
@@ -137,7 +145,7 @@
   transition: background-color 0.3s ease-in-out;
 }
 
-.task-item { will-change: transform; }
+/* .task-item { will-change: transform; } */
 
 .task-item:hover {
   background-color: var(--color-surface-2);
@@ -344,7 +352,7 @@
 .task-time {
   font-size: 14px;
   color: var(--color-text-secondary);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .task-date {
@@ -353,7 +361,7 @@
   align-items: center;
   justify-content: center;
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 400;
   color: var(
     --color-success
   ); /* Green color for the date, similar to the image */
