--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -125,9 +125,40 @@
     padding-left 0.26s cubic-bezier(0.25, 0.8, 0.3, 1);
 }
 
+
 .task-input-container:focus-within .task-add-input {
   padding-left: 64.5px;
 }
+
+.task-input-right{
+  position: absolute;
+  top: 47%;
+  right: 2px;
+  transform: translateY(-50%);
+  display: flex; align-items: center;
+  pointer-events: none;
+}
+
+.task-date-chip {
+  height: 28px;
+  padding: 0 12px;
+  border-radius: 8px;
+  background-color: var(--color-surface-3);
+  border: 1px solid var(--color-border);
+  display: inline-flex; align-items: center; gap: 8px;
+  margin: 23px 16px 0 0;
+  color: var(--color-text-primary);
+  font-size: 13px; font-weight: 600;
+  pointer-events: none;
+  cursor: pointer;
+
+  box-shadow: 0 2px 8px rgba(0,0,0,.18);
+}
+.task-date-chip .chip-ico { color: var(--color-text-primary); width:16px; height:16px; }
+
+
+/* .drag-handle-icon.lite svg{ margin-top:-2px; width:21px; height:21px; }
+.check-square.lite{ width:17px; height:17px; border-radius:4px; background: var(--color-border); } */
 
 .task-input-leftgroup{
   position: absolute;
